traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:15: error: not found: value GetX
      setPos(GetX()+1,GetY()-1)
             ^TraversalDiagonal:15: error: not found: value GetY
      setPos(GetX()+1,GetY()-1)
                      ^