traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
//var a : Int = 1
//var y : Int = 0
var counter : Int = 0;
var finalpos : Boolean = true;
override def run() {
      for(y <- 0 to 6){
        for (x <- 0 to y){
          setPos(x,y-x)
          writeMessage(counter)
          counter = counter + 1
      }
 
    }
    for (x <- 1 to 6){
      setPos(GetX()+1,GetY()-1)
      writeMessage(counter)
      counter = counter + 1
  }
      
    
  }

